// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty single rule 1`] = `
[
  {
    "$type": "rule",
    "nestedRules": [],
    "properties": [],
    "selector": ".banana ",
  },
]
`;

exports[`media query 1`] = `
[
  {
    "$type": "at",
    "body": [
      {
        "$type": "rule",
        "nestedRules": [
          {
            "$type": "rule",
            "nestedRules": [],
            "properties": [],
            "selector": ".banana ",
          },
        ],
        "properties": [],
        "selector": "",
      },
    ],
    "text": "media screen and (max-width: 992px) ",
  },
]
`;

exports[`single rule with no property and nested rule with one property 1`] = `
[
  {
    "$type": "rule",
    "nestedRules": [
      {
        "$type": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$type": "property",
            "text": "color: green",
          },
        ],
        "selector": ".nested ",
      },
    ],
    "properties": [],
    "selector": ".banana ",
  },
]
`;

exports[`single rule with one property 1`] = `
[
  {
    "$type": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$type": "property",
        "text": "color: red",
      },
    ],
    "selector": ".banana ",
  },
]
`;

exports[`single rule with one property and nested rule 1`] = `
[
  {
    "$type": "rule",
    "nestedRules": [
      {
        "$type": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$type": "property",
            "text": "color: green",
          },
        ],
        "selector": ".nested ",
      },
    ],
    "properties": [
      {
        "$type": "property",
        "text": "color: red",
      },
    ],
    "selector": ".banana ",
  },
]
`;
